Centrum Air: идемпотентность выпуска и рефакторинг модуля
Идемпотентность (ТЗ п. 7.3, 7.6.5):
- ключ = заголовок Idempotency-Key либо PNR + продукты + номер попытки оплаты;
- повтор завершённой заявки возвращает сохранённый ответ, не создавая дублей;
- каждая учётная группа выпускается в своей транзакции, факт выпуска фиксируется
  сразу, поэтому повтор после частичного отказа довыпускает только недостающие полисы;
- параллельный запрос с тем же ключом получает issue_in_progress, тот же ключ
  с другим телом — idempotency_key_reuse, повторная оплата той же брони без
  явного ключа — duplicate;
- новые таблицы INS_CENTRUM_AIR_IDEMPOTENCY и INS_CENTRUM_AIR_IDEMP_POLICY,
  DDL в src/main/resources/db/centrum_air_idempotency.sql.

Рефакторинг без изменения бизнес-логики выпуска:
- CentrumInsuranceService (522 строки) разделён на оркестратор, PolicyGroupIssuer,
  CentrumAirJdbcRepository (весь SQL) и ErspGateway (вызовы НАПП);
- правила состава рисков и разбор продуктов вынесены в RiskCatalog и ProductSelection;
- константы (продукт, подразделение, курс EUR, имена функций НАПП) вынесены в
  CentrumAirProperties и application.yml;
- журнал полисов читается через RowMapper, статусы отображаются в модель ТЗ п. 7.2,
  добавлены фильтры product и status, эндпоинт доступен по /policies;
- ошибки Centrum Air отдаются с машиночитаемым кодом и request id (ТЗ п. 7.6.6);
- аннуляция: устранена утечка соединения на вызове MAKEANNUL, отсутствующий полис
  даёт 404 вместо внутренней ошибки;
- валидация дополнена правилами ТЗ п. 7.6: даты вылета не раньше оплаты,
  совместимость продуктов, сверка премии с тарифной матрицей (по флагу конфигурации).

Тесты: разбор продуктов и состав рисков, сценарии идемпотентности.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011J7KAu5LdRGtaDH1Nu9fd4